// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disabled 1`] = `
.c1 {
  margin-bottom: 0px;
}

.c2 {
  font-size: 10px;
  line-height: 12px;
  font-weight: 500;
  text-transform: uppercase;
  text-align: left;
  cursor: inherit;
  color: #636768;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
  border: 0;
}

.c3 {
  font-size: 16px;
  line-height: 20px;
  background: #FFFFFF;
  border: 2px solid #D2D2D2;
  box-sizing: border-box;
  border-radius: 8px;
  width: 100%;
  padding: 16px;
  color: #112035;
  resize: both;
  cursor: not-allowed;
  opacity: 0.5;
  border-color: #D2D2D2;
  outline: none;
}

.c3:hover,
.c3:focus,
.c3:focus-visible {
  border-color: #b9b9b9;
}

<fieldset
  class="c0"
  id="textarea_id"
>
  <div
    class="c1"
  >
    <label
      class="c2"
      color="subtext"
      cursor="inherit"
      title=""
    >
      Textarea label
    </label>
  </div>
  <div
    class=""
  >
    <textarea
      class="c3"
      disabled=""
      id="textarea_id"
      placeholder="Placeholder text!"
      rows="4"
    />
  </div>
</fieldset>
`;

exports[`renders 1`] = `
.c1 {
  margin-bottom: 0px;
}

.c2 {
  font-size: 10px;
  line-height: 12px;
  font-weight: 500;
  text-transform: uppercase;
  text-align: left;
  cursor: inherit;
  color: #636768;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
  border: 0;
}

.c3 {
  font-size: 16px;
  line-height: 20px;
  background: #FFFFFF;
  border: 2px solid #D2D2D2;
  box-sizing: border-box;
  border-radius: 8px;
  width: 100%;
  padding: 16px;
  color: #112035;
  resize: both;
  cursor: text;
  opacity: 1;
  border-color: #D2D2D2;
  outline: none;
}

.c3:hover,
.c3:focus,
.c3:focus-visible {
  border-color: #b9b9b9;
}

<fieldset
  class="c0 Textarea"
  id="textarea_id"
>
  <div
    class="c1"
  >
    <label
      class="c2"
      color="subtext"
      cursor="inherit"
      title=""
    >
      Textarea label
    </label>
  </div>
  <div
    class=""
  >
    <textarea
      class="c3"
      id="textarea_id"
      placeholder="Placeholder text!"
      rows="4"
    />
  </div>
</fieldset>
`;

exports[`renders with error 1`] = `
.c1 {
  margin-bottom: 0px;
}

.c4 {
  margin-top: 8px;
}

.c2 {
  font-size: 10px;
  line-height: 12px;
  font-weight: 500;
  text-transform: uppercase;
  text-align: left;
  cursor: inherit;
  color: #636768;
}

.c5 {
  font-size: 12px;
  font-weight: 400;
  line-height: 16px;
  text-align: left;
  cursor: inherit;
  color: #D82C2C;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
  border: 0;
}

.c3 {
  font-size: 16px;
  line-height: 20px;
  background: #FFFFFF;
  border: 2px solid #D2D2D2;
  box-sizing: border-box;
  border-radius: 8px;
  width: 100%;
  padding: 16px;
  color: #112035;
  resize: both;
  cursor: text;
  opacity: 1;
  border-color: #D82C2C;
  outline: none;
}

.c3:hover,
.c3:focus,
.c3:focus-visible {
  border-color: #D82C2C;
}

<fieldset
  class="c0"
  id="textarea_id"
>
  <div
    class="c1"
  >
    <label
      class="c2"
      color="subtext"
      cursor="inherit"
      title=""
    >
      Textarea label
    </label>
  </div>
  <div
    class=""
  >
    <textarea
      class="c3"
      id="textarea_id"
      placeholder="Placeholder text!"
      rows="4"
    />
  </div>
  <span
    class="c4 c5"
    color="error"
    cursor="inherit"
    title=""
  >
    Something really quite terrible has gone wrong here!
  </span>
</fieldset>
`;
